@@ -1,0 +1,5 @@
+Processing test33...
+
+Warnings...
+
+test_input/test33.py:4 Variable (j) used before being set
