@@ -1,0 +1,10 @@
+'d'
+
+def x():
+    print j
+    j = 0
+
+def y():
+    for x in []:
+        print x
+
